fix: UsersManagementTable flex gap fix

--- a/src/widgets/user-management-table-widget/ui/users-management/UsersManagementTable.module.scss
+++ b/src/widgets/user-management-table-widget/ui/users-management/UsersManagementTable.module.scss
@@ -5,7 +5,7 @@
   max-width: 100%;
   width: 100%;
   height: 100%;
-  gap: 30px;
+  gap: 20px;
 }
 
 .controlsSection {
